# CCSEMO_exp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
data/labels/CCSEMO/: ccsemo_label.csv  ccsemo_labels.csv
data/labels/CCSEMO/5fold/: README  README.md  fold1.csv  fold2.csv  fold3.csv  fold4.csv  fold5.csv  fold_speaker_stats.txt
data/labels/CCSEMO/soft_label/: ccsemo_fold_emotion_compare.txt  ccsemo_fold_emotion_dist_soft_v2.txt  fold1_emotion_soft_v2.csv  fold2_emotion_soft_v2.csv  fold3_emotion_soft_v2.csv  fold4_emotion_soft_v2.csv  fold5_emotion_soft_v2.csv
data/labels/IEMOCAP/: fold1.csv  fold2.csv  fold3.csv  fold4.csv  fold5.csv  folds.txt  label.csv  label_s1-3_train_s4_val_s5_test.csv
data/labels/MSP-PODCAST/: label.csv
scripts/: aggregate_5fold_csv.py  aggregate_results.py  aggregate_runs_predictions.py  aggregate_with_norm.py  download_models.py  precompute_pitch.py
src/: infer.py  train.py
src/data/: __init__.py  audio_parsing_dataset.py
src/metrics/: __init__.py  ccc.py  mse.py  r2.py  rmse.py
src/model/: __init__.py  iemocap_audio_model.py
src/utils/: __init__.py  data_loading.py  experiment.py  hf_audio.py  logger.py  seed.py
