[project]
name = "ccsemo-exp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=0.34,<1.0",
    "librosa>=0.11.0",
    "openpyxl>=3.1.5",
    "transformers>=4.40.0",
    "tokenizers>=0.19.0",
    "praat-parselmouth>=0.4.6",
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "torchvision==0.21.0",
    "torchcodec>=0.8.1",
    "transforms>=0.2.1",
    "nvitop>=1.6.0",
    "pandas>=2.3.3",
    "matplotlib>=3.0.0",
    "seaborn>=0.13.2",
    "scipy>=1.16.3",
    "scikit-learn>=1.7.2",
    "ipdb>=0.13.13",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
